<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="image">Image</string>
    <string name="start">START</string>
    <string name="get_ready">GET READY FOR</string>
    <string name="upcoming_exercise">UPCOMING EXERCISE: </string>
    <string name="end">END</string>
    <string name="congrats">CONGRATULATIONS!</string>
    <string name="finish_message">You have finished the workout!</string>
    <string name="finish_button">FINISH</string>
    <string name="dialog_question">Are you sure?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
</resources>