<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dialog_question"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"/>
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_custom_margin"
        android:layout_marginEnd="@dimen/dialog_custom_margin"
        android:layout_marginStart="@dimen/dialog_custom_margin"
        android:gravity="center"
        android:text="You will stop your workout."
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dialog_custom_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/textViewYes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dialog_custom_margin"
            android:text="@string/yes_button"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/textViewNo"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/dialog_custom_margin"
            android:text="@string/no_button"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="8dp"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

    </LinearLayout>



</LinearLayout>